@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-30T08:19:37Z",
-  "count_outdated" : 611,
-  "uniques_outdated" : 348,
+  "timestamp" : "2022-10-30T16:21:40Z",
+  "count_outdated" : 612,
+  "uniques_outdated" : 349,
   "count" : 657,
   "uniques" : 374,
   "clones" : [
-    {
-      "timestamp": "2022-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-17T00:00:00Z",
       "count": 10,
