@@ -1,12 +1,7 @@
 {
-  "count": 46,
+  "count": 45,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-10-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-17T00:00:00Z",
       "count": 10,
